--- a/4. App Web HTML5 y PHP/2_Pagina_Clientes/assets/css/styles.css
+++ b/4. App Web HTML5 y PHP/2_Pagina_Clientes/assets/css/styles.css
@@ -8,11 +8,6 @@
 
 body{
     background-color: #ffffff;
-    background-image: url(../img/Portada.PNG);
-    background-repeat: no-repeat;
-    background-size: 60%;
-    background-position-x: 55%;
-    background-position-y: 4em;
 }
 
 header{
@@ -78,10 +73,11 @@ header{
 
 .navegacion .submenu .hijos{
     display: none;
-    background: rgba(241, 241, 241, 0.5);
+    background: rgba(241, 241, 241, 0.8);
     position: absolute;
     width: 166px;
     border: 1px solid rgb(194, 194, 194);
+    font-size: 11px;
 }
 
 .navegacion .submenu .hijos.user {
@@ -107,3 +103,109 @@ header{
     display: block;
 }
 
+/*------------------------------------------BARRA BUSQUEDA---------------------------------------*/
+.search{
+    width: 100%;
+    padding: 1%;
+    background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    padding-left: 5%;
+}
+
+.search-bar{
+    width: 100%;
+    max-width: 700px;
+    background: rgba(103, 159, 243, 0.4);
+    display: flex;
+    align-items: center;
+    border-radius: 60px;
+    padding: 10px 20px;
+    backdrop-filter: blur(4px) saturate(180px)
+}
+
+.search-bar input{
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    font-size: 20px;
+    color: #000000;
+}
+
+::placeholder{
+    color: #000000;
+}
+
+.search-bar button{
+    border: 0;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    background: #ffffff;
+}
+
+.funciones{
+    display: flex;
+    align-items: center;
+    padding-left: 26%;
+}
+
+.funciones button{
+    margin-left: 10px;
+    border-radius: 60px;
+    border: 0;
+    cursor: pointer;
+}
+
+.funciones button img{
+    height: 60px;
+    border-radius: 60px;
+}
+/*------------------------------------------TABLA------------------------------------------------*/
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+table {
+    color: #0b132b;;
+    font-size: 14px;
+    table-layout: fixed;
+    border-collapse: collapse;
+    width: 90%;
+}
+
+thead {
+    background: rgba(208, 255, 255, 1);
+}
+
+th {
+    padding: 20px 1px ;
+    font-weight: 700;
+    text-transform: uppercase;
+    border: 1px solid #0b132b
+}
+
+td {
+    padding: 15px;
+    text-align: center;
+    border: solid 1px rgba(0, 0, 0, 0.2);
+}
+
+td button{
+    background-color: rgba(0, 0, 0, 0);
+}
+
+td img{
+    height: 32px;
+    cursor: pointer;
+
+}
+
+tbody tr:hover {
+    background: rgba(103, 159, 243, 0.4);
+}
